# s3-endpoint

./: .gitignore  Cargo.toml  README.md  SPEC.md  s3_middlewared_server.md
.github/workflows/: ci.yml
docs/: server.md
src/: auth.rs  config.rs  error.rs  hooks.rs  http.rs  lib.rs  main.rs  middleware.rs
src/body/: aws_chunked.rs  checksum.rs  mod.rs  upload.rs
src/handlers/: delete_object.rs  get_object.rs  head_bucket.rs  head_object.rs  health.rs  mod.rs  multipart.rs  put_object.rs  request.rs  s3.rs  upload_metadata.rs
src/s3/: mod.rs  target.rs  types.rs
src/storage/: checksum.rs  complete_checksum.rs  fs_util.rs  mod.rs  model.rs  multipart.rs  object.rs  temp.rs
tests/: delete_object.rs  expect_continue.rs  get_object.rs  head_bucket.rs  head_object.rs  multipart.rs  put_object.rs  upload_parallel.py
tests/common/: mod.rs
tests/sdk/: aws_cli_smoke.sh  boto3_smoke.py  presigned_curl_smoke.py
tests/sdk/go-smoke/: go.mod  go.sum  main.go
tests/sdk/java-smoke/: pom.xml
tests/sdk/java-smoke/src/main/java/dev/rustedbytes/s3endpoint/: Smoke.java
tests/sdk/js-smoke/: index.js  package-lock.json  package.json
