[package]
name = "s3-endpoint"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
axum = "0.8"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
crc = "3"
dashmap = "6"
hex = "0.4"
http = "1"
futures-util = "0.3"
hmac = "0.12"
md-5 = "0.10"
percent-encoding = "2"
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
subtle = "2"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
